# nixxed

./: Cargo.toml  README.md  flake.nix  spec.md  test-config.nix
src/: config_parser.rs  main.rs  search.rs
src/app/: input.rs  mod.rs  property_editor.rs  search_handler.rs  types.rs
src/app/ui/: mod.rs  property_popup.rs  widgets.rs
