[package]
name = "nixxed"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
rnix = { git = "https://github.com/nix-community/rnix-parser" }
rowan = "0.15"
textwrap = "0.16"
